--- a/WanderLost/WanderLost/Server/appsettings.json
+++ b/WanderLost/WanderLost/Server/appsettings.json
@@ -12,5 +12,9 @@
       }
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ClientVersion": 1,
+  "IdentityServerOrigin": "https://localhost:5001",
+  "SqlConnectionString": "Data Source=(localdb)\\MSSQLLocalDB;Database=wanderlost-dev",
+  "FirebaseClientConfig": ".\\FirebaseDevConfig.js"
 }
