--- a/WanderLost/WanderLost/Server/appsettings.json
+++ b/WanderLost/WanderLost/Server/appsettings.json
@@ -12,9 +12,10 @@
       }
     }
   },
+  //"urls": "http://*:5000;https://*:5001",
   "AllowedHosts": "*",
   "ClientVersion": 1,
   "IdentityServerOrigin": "https://localhost:5001",
-  "SqlConnectionString": "Data Source=(localdb)\\MSSQLLocalDB;Database=wanderlost-dev",
+  "SqlConnectionString": "Database=WanderLost;Data Source=114.117.163.28;User ID=sa;Password=P@ssW0rd#;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
   "FirebaseClientConfig": ".\\FirebaseDevConfig.js"
 }
