--- a/WanderLost/WanderLost/Server/appsettings.Development.json
+++ b/WanderLost/WanderLost/Server/appsettings.Development.json
@@ -10,6 +10,7 @@
   },
   "ClientVersion": 1,
   "IdentityServerOrigin": "https://localhost:7043",
-  "SqlConnectionString": "Data Source=(localdb)\\MSSQLLocalDB;Database=wanderlost-dev",
+  //"SqlConnectionString": "Data Source=(localdb)\\MSSQLLocalDB;Database=wanderlost-dev",
+  "SqlConnectionString": "Database=WanderLost-Dev;Data Source=114.117.163.28;User ID=sa;Password=P@ssW0rd#;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
   "FirebaseClientConfig": ".\\FirebaseDevConfig.js"
 }
